#cmake file for building project Part
CMAKE_MINIMUM_REQUIRED(VERSION 2.4.6)
MARK_AS_ADVANCED(CMAKE_BACKWARDS_COMPATIBILITY)

PROJECT(Part)

SET(${PROJECT_NAME}_MAJOR_VERSION 0)
SET(${PROJECT_NAME}_MINOR_VERSION 1)
SET(${PROJECT_NAME}_PATCH_LEVEL 0)

SET(CMAKE_BINARY_DIR "/home/rialmat/study/Part_git/build_eclipse")

SET(CMAKE_BUILD_TYPE Debug)

ADD_SUBDIRECTORY(GDsl)
ADD_SUBDIRECTORY(Netlist)
ADD_SUBDIRECTORY(Path)
ADD_SUBDIRECTORY(FMBiPart)
ADD_SUBDIRECTORY(FMKWayPart)
ADD_SUBDIRECTORY(FMPart)
ADD_SUBDIRECTORY(FMPWPart)
ADD_SUBDIRECTORY(MlPart)
ADD_SUBDIRECTORY(part)
ADD_SUBDIRECTORY(Testing)
