set(CMAKE_BUILD_TYPE Release)

set(CMAKE_CXX_FLAGS "-Wno-deprecated")

set(CMAKE_CXX_FLAGS_RELEASE "-DNDBUG -finline-limit=6000")

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

set(SRC_FILES FMKWayGainMgr2.cpp FMKWayGainMgr4.cpp FMKWayPartComm.cpp FMKWayPartCore.cpp FMKWayPartCore4.cpp FMKWayPartMgrBase.cpp KWayConstrMgrBase.cpp)

ADD_LIBRARY(FMKWayPart ${SRC_FILES})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/FMBiPart ${PROJECT_SOURCE_DIR}/Netlist ${PROJECT_SOURCE_DIR}/GDsl)
