set(CMAKE_BUILD_TYPE Debug)

set(CMAKE_CXX_FLAGS "-Wno-deprecated")

set(CMAKE_CXX_FLAGS_RELEASE "-DNDBUG -finline-limit=6000")

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

set(SRC_FILES FMPartTmpl.cpp FMPartTmpl4.cpp)

ADD_LIBRARY(FMPart ${SRC_FILES})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/FMKWayPart ${PROJECT_SOURCE_DIR}/FMBiPart ${PROJECT_SOURCE_DIR}/Netlist ${PROJECT_SOURCE_DIR}/GDsl) 
