set(CMAKE_BUILD_TYPE Release)

set(CMAKE_CXX_FLAGS "-Wno-deprecated")

set(CMAKE_CXX_FLAGS_RELEASE "-DNDBUG -finline-limit=1000")

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

set(SRC_FILES MlPartTmpl.cpp)

ADD_LIBRARY(MlPart ${SRC_FILES})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/FMPWPart ${PROJECT_SOURCE_DIR}/FMPart ${PROJECT_SOURCE_DIR}/FMKWayPart ${PROJECT_SOURCE_DIR}/FMBiPart ${PROJECT_SOURCE_DIR}/Netlist ${PROJECT_SOURCE_DIR}/GDsl) 
