set(CMAKE_BUILD_TYPE Release)

set(CMAKE_CXX_FLAGS "-Wno-deprecated")

set(CMAKE_CXX_FLAGS_RELEASE "-DNDBUG")

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

set(SRC_FILES CycleRemovalServ.cpp LayerAssignmentServ.cpp PathMgr.cpp)

ADD_LIBRARY(Path ${SRC_FILES})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/FMBiPart ${PROJECT_SOURCE_DIR}/Netlist ${PROJECT_SOURCE_DIR}/GDsl)
