PROJECT(Testing)

ADD_SUBDIRECTORY(GDsl)
ADD_SUBDIRECTORY(Netlist)
ADD_SUBDIRECTORY(Netlist2)
ADD_SUBDIRECTORY(Netlist3)
ADD_SUBDIRECTORY(vrw)
ADD_SUBDIRECTORY(Contract)
ADD_SUBDIRECTORY(FMPart)
ADD_SUBDIRECTORY(FMPart2)
ADD_SUBDIRECTORY(FMPart3)
ADD_SUBDIRECTORY(FMPart4)
ADD_SUBDIRECTORY(MlPart)
ADD_SUBDIRECTORY(MlPart2)
ADD_SUBDIRECTORY(MlPart4)
ADD_SUBDIRECTORY(MlPart7)
ADD_SUBDIRECTORY(FMPWPart)
ADD_SUBDIRECTORY(MlPWPart)
ADD_SUBDIRECTORY(FMFIFO)
ADD_SUBDIRECTORY(MlKWayFIFO)
ADD_SUBDIRECTORY(FMKWayTop)
ADD_SUBDIRECTORY(FMKWayPart)
ADD_SUBDIRECTORY(MlFIFO)
ADD_SUBDIRECTORY(Removal)
ADD_SUBDIRECTORY(Removal2)


