set(CMAKE_BUILD_TYPE Debug)

set(CMAKE_CXX_FLAGS "-Wno-deprecated-g")

set(CMAKE_CXX_FLAGS_RELEASE "-finline-limit=6000")

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(SRC_FILES main.cpp)

ADD_EXECUTABLE(part ${SRC_FILES})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/MlPart ${PROJECT_SOURCE_DIR}/Netlist ${PROJECT_SOURCE_DIR}/FMPart ${PROJECT_SOURCE_DIR}/FMBiPart ${PROJECT_SOURCE_DIR}/FMKWayPart ${PROJECT_SOURCE_DIR}/Path ${PROJECT_SOURCE_DIR}/GDsl)

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

TARGET_LINK_LIBRARIES(part MlPart FMPWPart FMPart FMKWayPart FMBiPart Path Netlist GDsl)
