set(CMAKE_BUILD_TYPE Release)

set(CMAKE_CXX_FLAGS_RELEASE "-DNDBUG")

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(SRC_FILES main.cpp)

ADD_EXECUTABLE(main ${SRC_FILES})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Netlist ${CMAKE_SOURCE_DIR}/FMBiPart ${CMAKE_SOURCE_DIR}/FMKWayPart ${CMAKE_SOURCE_DIR}/FMPWPart ${CMAKE_SOURCE_DIR}/FMPart  ${CMAKE_SOURCE_DIR}/MlPart ${CMAKE_SOURCE_DIR}/GDsl)

LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib)

TARGET_LINK_LIBRARIES(main MlPart FMPWPart FMPart FMKWayPart FMBiPart Path Netlist GDsl efence)



SET_TARGET_PROPERTIES(main PROPERTIES OUTPUT_NAME MlFIFO)
