set(CMAKE_BUILD_TYPE Debug)

set(CMAKE_CXX_FLAGS_RELEASE "-DNDBUG")

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(SRC_FILES main.cpp)

ADD_EXECUTABLE(main ${SRC_FILES})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/FMBiPart ${CMAKE_SOURCE_DIR}/Netlist ${CMAKE_SOURCE_DIR}/GDsl)

LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib)

TARGET_LINK_LIBRARIES(main Netlist)



SET_TARGET_PROPERTIES(main PROPERTIES OUTPUT_NAME Netlist2)
