set(CMAKE_BUILD_TYPE Debug)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(SRC_FILES main.cpp)

ADD_EXECUTABLE(main ${SRC_FILES})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/GDsl)

LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib}

TARGET_LINK_LIBRARIES(main GDsl)

SET_TARGET_PROPERTIES(main PROPERTIES OUTPUT_NAME GMultiSet)
